update xkcd image

--- a/index.html
+++ b/index.html
@@ -1746,13 +1746,13 @@
                         <img src="https://i.redd.it/ob4k1mlvwxn91.png" alt="Lord of the Rings storyline visualization" class="research-image">
                     </div>
                     <div class="image-flex">
-                        <img src="media/LOTR_Storyline.png" alt="Lord of the Rings storyline visualization" class="research-image">
+                        <img src="https://imgs.xkcd.com/comics/movie_narrative_charts.png" alt="Lord of the Rings storyline visualization" class="research-image">
                     </div>
                 </div>
                 <p class="italic-text">How do we encode higher-level semantics such as characters or storylines?</p>
                 <div class="attribution">
                     Sources: <a href="https://i.redd.it/ob4k1mlvwxn91.png" target="_blank">Reddit</a>,                     , 
-                    <a href="https://public.tableau.com/thumb/views/LordoftheRingsStoryline/LOTRStoryline" target="_blank">Tableau Public</a>
+                    <a href="https://imgs.xkcd.com/comics/movie_narrative_charts.png" target="_blank">xkcd</a>
                 </div>
             </div>
         </div>
