--- a/presenter-notes.html
+++ b/presenter-notes.html
@@ -311,13 +311,13 @@
             • We've used speech-to-text, text-to-speech, and now increasingly, text-to-image and text-to-video technologies.
         </div>
         
-        <p>Generative AI is accelerating this space — making modality transformation faster, more powerful, and more accessible. This kind of technology will enable creators to express their content in the modality that makes the most sense for their message, audience, and intent.</p>
+        <p>Generative AI is accelerating this space — making modality transformation more powerful, and more accessible. We need to develop transformations that enable creators to express their content in the modality that makes the most sense for them.</p>
     </div>
 
     <div class="section" data-slide="12">
         <div class="slide-number">Slide 12</div>
         <div class="slide-title">Consumer Experience</div>
-        <p>On the consumption side, we've also explored transformations — like turning a video into a hierarchical document, or converting a document into an audiovisual slideshow.</p>
+        <p>On the consumption side, we've also explored transformations — the top row shows a project I worked on with Floraine and Wil, when I was an intern. We explored turning a video into a hierarchical document. The second row shows another internship project by Mackenzie Leake which converted documents into an audiovisual slideshow.</p>
         
         <p class="emphasis">So again, I ask:</p>
         <div class="bullet-point">
