--- a/index.html
+++ b/index.html
@@ -1921,7 +1921,12 @@
                 </div>
                 
                 <div style="margin-top: 2rem; display: flex; flex-direction: column; align-items: center; gap: 1rem;">
-                    <button class="btn" id="restartBtn">Restart Presentation</button>
+                    <div style="font-size: 1rem; opacity: 0.8; text-align: center; margin-bottom: 0.5rem;">
+                        You can revisit the slides at <strong>hishin.github.io/curateplus</strong>
+                    </div>
+                    <div style="font-size: 0.8rem; opacity: 0.7; text-align: center;">
+                        <a href="#" id="restartBtn" style="color: var(--primary); text-decoration: none;">Restart Presentation</a>
+                    </div>
                     <div style="font-size: 0.8rem; opacity: 0.7; text-align: center;">
                         <a href="#" id="backupSlidesLink" style="color: var(--primary); text-decoration: none;">View Backup Slides</a>
                     </div>
